[project]
name = "Assignment_9"
version = "0.1.0"
description = "GSG Advanced Course: Solution for Assingment 9 - Yazid Abusultan"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
